--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     background-repeat: no-repeat;
 }
 #apiParams {
+    font-family: monospace;
     background-color: white;
     border: 2px solid #666;
     border-radius: 5px;
@@ -28,6 +29,9 @@ body {
 #apiParams.invisible {
     display: none;
 }
+#apiParams.error {
+    background-color: lightpink;
+}
 .section {
     margin: 10px 0;
 }
@@ -39,13 +43,17 @@ body {
 .section input[type="text"] {
     width: 328px;
 }
+.help {
+    margin: -30px 0 10px 0;
+}
 .action {
+    margin: 10px 0 0 0;
     text-align: right;
 }
 .action button {
     text-align: center;
     width: 100px;
-    margin: 10px;
+    margin: 8px;
     padding: 5px;
 }
 #openParams {
